--- a/frontend/dockerfilefront
+++ b/frontend/dockerfilefront
@@ -1,6 +1,6 @@
 FROM node:14
 WORKDIR /app
-COPY package.json
+COPY package*.json ./
 RUN npm install 
 RUN npm install axios react-transitions-group
 COPY . .
